--- a/Meyer&Schmid_RScript_GhanaBats.Rmd
+++ b/Meyer&Schmid_RScript_GhanaBats.Rmd
@@ -568,42 +568,42 @@ mod229Simp_r<-glmer(X229ELogical~ INVSIMP + RelAbundHipAb + relative_subadults +
 check_collinearity(mod229Simp_r)
 summary(mod229Simp_r)
 tab_model(mod229Simp_r)
-dredge_mod229_r<-dredge(mod229Simp_r)
+dredge_mod229Simp_r<-dredge(mod229Simp_r)
 #summary(model.avg(dredge_mod229Simp_r, subset = delta <= 2))
 
 mod229Simp_r2<-glmer(X229ELogical~ INVSIMP + RelAbundHipB + relative_subadults + (1|site/sample_period), family = binomial, data = metadata_common.species, na.action=na.fail)
 check_collinearity(mod229Simp_r2)
 summary(mod229Simp_r2)
 tab_model(mod229Simp_r2)
-dredge_mod229_r2<-dredge(mod229Simp_r2)
+dredge_mod229Simp_r2<-dredge(mod229Simp_r2)
 #summary(model.avg(dredge_mod229Simp_r2, subset = delta <= 2))
 
 mod229Simp_r3<-glmer(X229ELogical~ INVSIMP + RelAbundHipC + relative_subadults + (1|site/sample_period), family = binomial, data = metadata_common.species, na.action=na.fail)
 check_collinearity(mod229Simp_r3)
 summary(mod229Simp_r3)
 tab_model(mod229Simp_r3)
-dredge_mod229_r3<-dredge(mod229Simp_r3)
+dredge_mod229Simp_r3<-dredge(mod229Simp_r3)
 #summary(model.avg(dredge_mod229Simp_r3, subset = delta <= 2))
 
 mod229Simp_r4<-glmer(X229ELogical~ INVSIMP + RelAbundHipD + relative_subadults + (1|site/sample_period), family = binomial, data = metadata_common.species, na.action=na.fail)
 check_collinearity(mod229Simp_r4)
 summary(mod229Simp_r4)
 tab_model(mod229Simp_r4)
-dredge_mod229_r4<-dredge(mod229Simp_r4)
+dredge_mod229Simp_r4<-dredge(mod229Simp_r4)
 #summary(model.avg(dredge_mod229Simp_r4, subset = delta <= 2))
 
 mod229Simp_r5<-glmer(X229ELogical~ INVSIMP + RelAbundColAf + relative_subadults + (1|site/sample_period), family = binomial, data = metadata_common.species, na.action=na.fail)
 check_collinearity(mod229Simp_r5)
 summary(mod229Simp_r5)
 tab_model(mod229Simp_r5)
-dredge_mod229_r5<-dredge(mod229Simp_r5)
+dredge_mod229Simp_r5<-dredge(mod229Simp_r5)
 #summary(model.avg(dredge_mod229Simp_r5, subset = delta <= 2))
 
 mod229Simp_r6<-glmer(X229ELogical~ INVSIMP + RelAbundNyc + relative_subadults + (1|site/sample_period), family = binomial, data = metadata_common.species, na.action=na.fail)
 check_collinearity(mod229Simp_r6)
 summary(mod229Simp_r6)
 tab_model(mod229Simp_r6)
-dredge_mod229_r6<-dredge(mod229Simp_r6)
+dredge_mod229Simp_r6<-dredge(mod229Simp_r6)
 #summary(model.avg(dredge_mod229Simp_r6, subset = delta <= 2))
 
 #FDR correction
@@ -623,42 +623,42 @@ mod229SR_r<-glmer(X229ELogical~ SR + RelAbundHipAb + relative_subadults + (1|sit
 check_collinearity(mod229SR_r)
 summary(mod229SR_r)
 tab_model(mod229SR_r)
-dredge_mod229_r<-dredge(mod229SR_r)
+dredge_mod229SR_r<-dredge(mod229SR_r)
 #summary(model.avg(dredge_mod229SR_r, subset = delta <= 2))
 
 mod229SR_r2<-glmer(X229ELogical~ SR + RelAbundHipB + relative_subadults + (1|site/sample_period), family = binomial, data = metadata_common.species, na.action=na.fail)
 check_collinearity(mod229SR_r2)
 summary(mod229SR_r2)
 tab_model(mod229SR_r2)
-dredge_mod229_r2<-dredge(mod229SR_r2)
+dredge_mod229SR_r2<-dredge(mod229SR_r2)
 #summary(model.avg(dredge_mod229SR_r2, subset = delta <= 2))
 
 mod229SR_r3<-glmer(X229ELogical~ SR + RelAbundHipC + relative_subadults + (1|site/sample_period), family = binomial, data = metadata_common.species, na.action=na.fail)
 check_collinearity(mod229SR_r3)
 summary(mod229SR_r3)
 tab_model(mod229SR_r3)
-dredge_mod229_r3<-dredge(mod229SR_r3)
+dredge_mod229SR_r3<-dredge(mod229SR_r3)
 #summary(model.avg(dredge_mod229SR_r3, subset = delta <= 2))
 
 mod229SR_r4<-glmer(X229ELogical~ SR + RelAbundHipD + relative_subadults + (1|site/sample_period), family = binomial, data = metadata_common.species, na.action=na.fail)
 check_collinearity(mod229SR_r4)
 summary(mod229SR_r4)
 tab_model(mod229SR_r4)
-dredge_mod229_r4<-dredge(mod229SR_r4)
+dredge_mod229SR_r4<-dredge(mod229SR_r4)
 #summary(model.avg(dredge_mod229SR_r4, subset = delta <= 2))
 
 mod229SR_r5<-glmer(X229ELogical~ SR + RelAbundColAf + relative_subadults + (1|site/sample_period), family = binomial, data = metadata_common.species, na.action=na.fail)
 check_collinearity(mod229SR_r5)
 summary(mod229SR_r5)
 tab_model(mod229SR_r5)
-dredge_mod229_r5<-dredge(mod229SR_r5)
+dredge_mod229SR_r5<-dredge(mod229SR_r5)
 #summary(model.avg(dredge_mod229SR_r5, subset = delta <= 2))
 
 mod229SR_r6<-glmer(X229ELogical~ SR + RelAbundNyc + relative_subadults + (1|site/sample_period), family = binomial, data = metadata_common.species, na.action=na.fail)
 check_collinearity(mod229SR_r6)
 summary(mod229SR_r6)
 tab_model(mod229SR_r6)
-dredge_mod229_r6<-dredge(mod229SR_r6)
+dredge_mod229SR_r6<-dredge(mod229SR_r6)
 #summary(model.avg(dredge_mod229SR_r6, subset = delta <= 2))
 
 #FDR correction
@@ -900,42 +900,42 @@ mod2bSi_r<-glmer(X2bLogical~ INVSIMP + RelAbundHipAb + relative_subadults + (1|s
 check_collinearity(mod2bSi_r)
 summary(mod2bSi_r)
 tab_model(mod2bSi_r)
-dredge_mod2b_r<-dredge(mod2bSi_r)
+dredge_mod2bSi_r<-dredge(mod2bSi_r)
 #summary(model.avg(dredge_mod2bSi_r, subset = delta <= 2))
 
 mod2bSi_r2<-glmer(X2bLogical~ INVSIMP + RelAbundHipB + relative_subadults + (1|site/sample_period), family = binomial, data = metadata_common.species, na.action=na.fail)
 check_collinearity(mod2bSi_r2)
 summary(mod2bSi_r2)
 tab_model(mod2bSi_r2)
-dredge_mod2b_r2<-dredge(mod2bSi_r2)
+dredge_mod2bSi_r2<-dredge(mod2bSi_r2)
 #summary(model.avg(dredge_mod2bSi_r2, subset = delta <= 2))
 
 mod2bSi_r3<-glmer(X2bLogical~ INVSIMP + RelAbundHipC + relative_subadults + (1|site/sample_period), family = binomial, data = metadata_common.species, na.action=na.fail)
 check_collinearity(mod2bSi_r3)
 summary(mod2bSi_r3)
 tab_model(mod2bSi_r3)
-dredge_mod2b_r3<-dredge(mod2bSi_r3)
+dredge_mod2bSi_r3<-dredge(mod2bSi_r3)
 #summary(model.avg(dredge_mod2bSi_r3, subset = delta <= 2))
 
 mod2bSi_r4<-glmer(X2bLogical~ INVSIMP + RelAbundHipD + relative_subadults + (1|site/sample_period), family = binomial, data = metadata_common.species, na.action=na.fail)
 check_collinearity(mod2bSi_r4)
 summary(mod2bSi_r4)
 tab_model(mod2bSi_r4)
-dredge_mod2b_r4<-dredge(mod2bSi_r4)
+dredge_mod2bSi_r4<-dredge(mod2bSi_r4)
 #summary(model.avg(dredge_mod2bSi_r4, subset = delta <= 2))
 
 mod2bSi_r5<-glmer(X2bLogical~ INVSIMP + RelAbundColAf + relative_subadults + (1|site/sample_period), family = binomial, data = metadata_common.species, na.action=na.fail)
 check_collinearity(mod2bSi_r5)
 summary(mod2bSi_r5)
 tab_model(mod2bSi_r5)
-dredge_mod2b_r5<-dredge(mod2bSi_r5)
+dredge_mod2bSi_r5<-dredge(mod2bSi_r5)
 #summary(model.avg(dredge_mod2bSi_r5, subset = delta <= 2))
 
 mod2bSi_r6<-glmer(X2bLogical~ INVSIMP + RelAbundNyc + relative_subadults + (1|site/sample_period), family = binomial, data = metadata_common.species, na.action=na.fail)
 check_collinearity(mod2bSi_r6)
 summary(mod2bSi_r6)
 tab_model(mod2bSi_r6)
-dredge_mod2b_r6<-dredge(mod2bSi_r6)
+dredge_mod2bSi_r6<-dredge(mod2bSi_r6)
 #summary(model.avg(dredge_mod2bSi_r6, subset = delta <= 2))
 
 #FDR correction
@@ -955,42 +955,42 @@ mod2bSR_r<-glmer(X2bLogical~ SR + RelAbundHipAb + relative_subadults + (1|site/s
 check_collinearity(mod2bSR_r)
 summary(mod2bSR_r)
 tab_model(mod2bSR_r)
-dredge_mod2b_r<-dredge(mod2bSR_r)
+dredge_mod2bSR_r<-dredge(mod2bSR_r)
 #summary(model.avg(dredge_mod2bSR_r, subset = delta <= 2))
 
 mod2bSR_r2<-glmer(X2bLogical~ SR + RelAbundHipB + relative_subadults + (1|site/sample_period), family = binomial, data = metadata_common.species, na.action=na.fail)
 check_collinearity(mod2bSR_r2)
 summary(mod2bSR_r2)
 tab_model(mod2bSR_r2)
-dredge_mod2b_r2<-dredge(mod2bSR_r2)
+dredge_mod2bSR_r2<-dredge(mod2bSR_r2)
 #summary(model.avg(dredge_mod2bSR_r2, subset = delta <= 2))
 
 mod2bSR_r3<-glmer(X2bLogical~ SR + RelAbundHipC + relative_subadults + (1|site/sample_period), family = binomial, data = metadata_common.species, na.action=na.fail)
 check_collinearity(mod2bSR_r3)
 summary(mod2bSR_r3)
 tab_model(mod2bSR_r3)
-dredge_mod2b_r3<-dredge(mod2bSR_r3)
+dredge_mod2bSR_r3<-dredge(mod2bSR_r3)
 #summary(model.avg(dredge_mod2bSR_r3, subset = delta <= 2))
 
 mod2bSR_r4<-glmer(X2bLogical~ SR + RelAbundHipD + relative_subadults + (1|site/sample_period), family = binomial, data = metadata_common.species, na.action=na.fail)
 check_collinearity(mod2bSR_r4)
 summary(mod2bSR_r4)
 tab_model(mod2bSR_r4)
-dredge_mod2b_r4<-dredge(mod2bSR_r4)
+dredge_mod2bSR_r4<-dredge(mod2bSR_r4)
 #summary(model.avg(dredge_mod2bSR_r4, subset = delta <= 2))
 
 mod2bSR_r5<-glmer(X2bLogical~ SR + RelAbundColAf + relative_subadults + (1|site/sample_period), family = binomial, data = metadata_common.species, na.action=na.fail)
 check_collinearity(mod2bSR_r5)
 summary(mod2bSR_r5)
 tab_model(mod2bSR_r5)
-dredge_mod2b_r5<-dredge(mod2bSR_r5)
+dredge_mod2bSR_r5<-dredge(mod2bSR_r5)
 #summary(model.avg(dredge_mod2bSR_r5, subset = delta <= 2))
 
 mod2bSR_r6<-glmer(X2bLogical~ SR + RelAbundNyc + relative_subadults + (1|site/sample_period), family = binomial, data = metadata_common.species, na.action=na.fail)
 check_collinearity(mod2bSR_r6)
 summary(mod2bSR_r6)
 tab_model(mod2bSR_r6)
-dredge_mod2b_r6<-dredge(mod2bSR_r6)
+dredge_mod2bSR_r6<-dredge(mod2bSR_r6)
 #summary(model.avg(dredge_mod2bSR_r6, subset = delta <= 2))
 
 #FDR correction
